[gd_scene load_steps=3 format=3 uid="uid://3mhnqi3hq7mu"]

[ext_resource type="Script" path="res://script/EnemieSpawner.gd" id="1_3x0dv"]
[ext_resource type="PackedScene" uid="uid://1xelpqk8dimq" path="res://Scenes/Enemies/Peterchy.tscn" id="2_te5jg"]

[node name="EnemieSpawner" type="Node2D"]
script = ExtResource("1_3x0dv")
enemie = ExtResource("2_te5jg")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
